# CHIMERA-Revolutionary-AI-Architecture---Pure-OpenGL-Deep-Learning

./: .gitignore  CHIMERA_GITHUB.rar  CHIMERA_Revolutionary_AI_Architecture (1).html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
chimera_v3/: __init__.py  demo_pure.py
demos/: README.md  demo_holographic_pure.py  demo_main.py
docs/: INSTALLATION.md  QUICK_START.md
examples/: README.md  attention_demo.py  math_operations.py
tests/: README.md  __init__.py  benchmark_speed.py  test_generation_complete.py  test_matmul_correctness.py  test_model_conversion.py  test_retina_basic.py
